--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,25 @@
-version: '3'
-
 services:
   app:
     image: demo-docker
     build:
       context: ./
       dockerfile: Dockerfile
-    volumes:
-      - /data/app
+    restart: on-failure
+    env_file: ./.env
     ports:
-      - "8081:8081"
+      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-            "spring.datasource.url"  : "jdbc:mysql://localhost:3306/presupuestos_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false",
-            "spring.datasource.username" : "henny",
-            "spring.datasource.password" : "feferrefe2020",
-            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-            "spring.jpa.hibernate.ddl-auto" : "update"
-          }'
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.username" : "$MYSQLDB_USER",
+        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
+
+volumes:
+  db:
