--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 server.port=8081
 # server.contextPath=/api
-spring.datasource.url = jdbc:mysql://localhost:3306/presupuestos_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://192.168.100.156:3306/presupuestos_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 spring.datasource.username=henny
 spring.datasource.password=feferrefe2020
